fixed adaptive in header block for horizontal position iPhone 6s/SE

--- a/css/style.css
+++ b/css/style.css
@@ -448,3 +448,29 @@ body {
     padding-top: 40px;
   }
 }
+@media (max-height: 568px) {
+  .header-content__title {
+    margin-bottom: 0;
+    font-size: 60px;
+    line-height: 70px;
+  }
+
+  .header-content__text {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .header__top {
+    padding: 15px 0 0;
+  }
+
+  .slider .slick-dots {
+    text-align: right;
+  }
+
+  .menu__list a {
+    font-size: 20px;
+    line-height: 24px;
+    padding: 14px 10px 10px 0;
+  }
+}
